--- a/src/modules/_global/front/components/hover.module.css
+++ b/src/modules/_global/front/components/hover.module.css
@@ -4,3 +4,13 @@
         transform: scale(1.02);
       }
 }
+
+.transisi {
+  transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  -moz-transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  -ms-transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  -o-transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition-duration: 10s;
+  transition-delay: 5s;
+}
